--- a/style.css
+++ b/style.css
@@ -102,6 +102,18 @@
     width: 34%;
     background-color: var(--bg-color3);
 }
+.content__container--musics::-webkit-scrollbar{
+    width: 10px;
+}
+.content__container--musics::-webkit-scrollbar-track{
+    margin: 60px 0;
+    background: var(--bg-color1);
+    border-radius: 3px;
+}
+.content__container--musics::-webkit-scrollbar-thumb{
+    border-radius: 3px;
+    background: var(--bg-color3);
+}
 .content__container--musics{
     display: flex;
     flex-direction: column;
